[gd_scene load_steps=7 format=3 uid="uid://8afj2opdu48e"]

[ext_resource type="Theme" uid="uid://dqixgcsr3m1l0" path="res://Assets/UI/Themes/Tooltip_UI_Theme.tres" id="1_r8dxi"]
[ext_resource type="Script" uid="uid://ck8f0806rhito" path="res://Scripts/Controllers/EnemyTooltipUIController.gd" id="2_eu5os"]
[ext_resource type="FontFile" uid="uid://djhpuwc8o5esm" path="res://Assets/UI/Font/PixelOperator8.ttf" id="2_r8dxi"]
[ext_resource type="FontFile" uid="uid://cq6k7a56rmitc" path="res://Assets/UI/Font/PixelOperator8-Bold.ttf" id="3_eu5os"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r8dxi"]
bg_color = Color(0.15294118, 0.1254902, 0.1882353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eu5os"]
bg_color = Color(0.46666667, 0.53333336, 0.54901963, 1)

[node name="EnemyTooltipContainer" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_r8dxi")
script = ExtResource("2_eu5os")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="EnemyNameLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_r8dxi")
theme_override_fonts/bold_font = ExtResource("3_eu5os")
bbcode_enabled = true
text = "[b]Enemy Name[/b]"
fit_content = true
autowrap_mode = 0

[node name="HpBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.7294118, 0.78039217, 0.78039217, 1)
theme_override_fonts/font = ExtResource("2_r8dxi")
theme_override_font_sizes/font_size = 8
theme_override_styles/background = SubResource("StyleBoxFlat_r8dxi")
theme_override_styles/fill = SubResource("StyleBoxFlat_eu5os")
show_percentage = false

[node name="HpBarLabel" type="RichTextLabel" parent="VBoxContainer/HpBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_r8dxi")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "250 / 250"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
